--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "ejs": "^2.5.6",
     "express": "4.15.3"
   },
+  "repository": {
+    "type":"git",
+    "url":"https://github.com/jsl15c/cuban-pete.git"
+  },
   "engines": {
     "node": "6.8.0"
   }
